WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
228757
Null check self.session after calling _cancel instead of before
https://bugs.webkit.org/show_bug.cgi?id=228757
Summary
Null check self.session after calling _cancel instead of before
Alex Christensen
Reported
2021-08-03 15:32:51 PDT
Null check self.session after calling _cancel instead of before
Attachments
Patch
(1.66 KB, patch)
2021-08-03 15:41 PDT
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2021-08-03 15:41:24 PDT
Created
attachment 434867
[details]
Patch
Alex Christensen
Comment 2
2021-08-03 15:41:27 PDT
<
rdar://problem/79224868
>
Geoffrey Garen
Comment 3
2021-08-03 16:23:31 PDT
Comment on
attachment 434867
[details]
Patch r=me
EWS
Comment 4
2021-08-03 17:02:55 PDT
Committed
r280623
(
240236@main
): <
https://commits.webkit.org/240236@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 434867
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug